[package]
name = "tcp-over-udp-ping-pong"
version = "0.1.0"
edition = "2024"

[dependencies]
bstr = "1.12.0"
clap = { version = "4.5.37", features = ["derive"] }
crc = "3.3.0"
ctrlc = { version = "3.4.6", features = ["termination"] }
displaydoc = "0.2.5"
embassy-net = { version = "0.7.0", features = ["std", "alloc", "tcp", "proto-ipv4", "medium-ip", "log"] }
embassy-time-driver = "0.2.0"
flume = "0.11.1"
futures-io = "0.3.31"
futures-util = "0.3.31"
pin-project = "1.1.10"
scopeguard = "1.2.0"
simple_logger = "5.0.0"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-util = "0.7.15"
yamux = "0.13.4"
